c4prj2_input/grade.txt
Grading at Fri Aug  2 21:52:29 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:9:12: error: incompatible types when assigning to type ‘future_cards_t {aka struct future_cards_tag}’ from type ‘void *’
  fc[index] = malloc(sizeof(deck_t));
            ^
future.c:10:23: error: incompatible type for argument 1 of ‘add_empty_card’
  ptr = add_empty_card(fc[index]);
                       ^
In file included from future.h:3:0,
                 from future.c:3:
deck.h:18:10: note: expected ‘deck_t * {aka struct deck_tag *}’ but argument is of type ‘future_cards_t {aka struct future_cards_tag}’
 card_t * add_empty_card(deck_t * deck);
          ^
future.c: In function ‘future_cards_from_deck’:
future.c:17:11: error: ‘return’ with a value, in function returning void [-Werror]
    return NULL;
           ^
future.c:19:13: error: invalid operands to binary == (have ‘future_cards_t {aka struct future_cards_tag}’ and ‘void *’)
   if (fc[i] == NULL) {
             ^
future.c:20:16: error: incompatible type for argument 1 of ‘add_card_to’
    add_card_to(fc[i], *deck->cards[i]);
                ^
In file included from future.h:3:0,
                 from future.c:3:
deck.h:17:6: note: expected ‘deck_t * {aka struct deck_tag *}’ but argument is of type ‘future_cards_t {aka struct future_cards_tag}’
 void add_card_to(deck_t * deck, card_t c);
      ^
future.c: At top level:
future.c:25:1: error: unterminated comment
 /*
 ^
cc1: all warnings being treated as errors
Compilation of future.c failed

Overall Grade: F
